--- a/index.html
+++ b/index.html
@@ -124,7 +124,20 @@
 
       <!--==================== LOGOS ====================-->
       <section class="logos section">
-
+         <div class="logos__container container grid">
+            <div class="logo__img">
+               <img src="./assets/img/logo1.png" alt="logo">
+            </div>
+            <div class="logo__img">
+               <img src="./assets/img/logo2.png" alt="logo">
+            </div>
+            <div class="logo__img">
+               <img src="./assets/img/logo3.png" alt="logo">
+            </div>
+            <div class="logo__img">
+               <img src="./assets/img/logo4.png" alt="logo">
+            </div>
+         </div>
       </section>
 
       <!--==================== POPULAR ====================-->
@@ -164,7 +177,7 @@
    <script src=""></script>
 
    <!--=============== MAIN JS ===============-->
-   <script src=""></script>
+   <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
