--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                   </div>
                   <div class="contact__card-box">
                      <div class="contact__card-info">
-                        <i class='bx bxs-message-rounded-dots' ></i>
+                        <i class='bx bxs-message-rounded-dots'></i>
                         <div>
                            <h3 class="contact__card-title">Chat</h3>
                            <p class="contact__card-description">
@@ -407,7 +407,7 @@
                   </div>
                   <div class="contact__card-box">
                      <div class="contact__card-info">
-                        <i class='bx bxs-envelope' ></i>
+                        <i class='bx bxs-envelope'></i>
                         <div>
                            <h3 class="contact__card-title">Message</h3>
                            <p class="contact__card-description">
@@ -425,7 +425,16 @@
 
       <!--==================== SUBSCRIBE ====================-->
       <section class="subscribe section">
-
+         <div class="subscribe__container container">
+            <h1 class="subscribe__title">
+               Get Started with Holux
+            </h1>
+            <p class="subscribe__description">
+               Subscribe and find super attractive price
+               quotes from us, Find your residence soon
+            </p>
+            <a href="#" class="button subscribe__button">Get Started</a>
+         </div>
       </section>
    </main>
 
