--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             </ul>
          </div>
 
+         <!-- Theme change button -->
+         <i class='bx bx-moon change-theme' id="theme-button"></i>
+
          <a href="#" class="button nav__button">
             Subscribe
          </a>
@@ -538,7 +541,7 @@
 
    <!--========== SCROLL UP ==========-->
    <a href="#" class="scrollup" id="scroll-up">
-      <i class='bx bx-chevrons-up' ></i>
+      <i class='bx bx-chevrons-up'></i>
    </a>
 
    <!--=============== SCROLLREVEAL ===============-->
